--- a/Juliette.ipynb
+++ b/Juliette.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "    def solve(self):\n",
     "        # Specify the solver and solve the model\n",
-    "        opt = SolverFactory('cbc') #Here we use the cbc solver -- open source software\n",
+    "        opt = SolverFactory('glpk') #Here we use the cbc solver -- open source software\n",
     "        self.results = opt.solve(self.model1,tee=False) #We solve a problem, but do not show the solver output\n",
     "\n",
     "# Create an optimization object        \n",
