--- a/Juliette.ipynb
+++ b/Juliette.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b092026c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"TEST\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "88fba40c",
    "metadata": {},
    "outputs": [
@@ -65,7 +55,7 @@
     "#REQUIRES CBC TO BE INSTALLED ON THE MACHINE USED!!!  See https://github.com/coin-or/Cbc -- OTHER SOLVERS CAN BE USED -- \n",
     "#THEN CHANGE this line: \"opt = SolverFactory('cbc') #Here we use the cbc solver -- open source software\"\n",
     "\n",
-    "path = \"c:/temp/Juliette/\"#ADJUST TO OWN PATH #\"c:/mytemp/avohakkutpois/Files_for_optimization/temp/\"\n",
+    "path = \"c:/temp/GIT/SIMPLE_PROBLEM/\"#ADJUST TO OWN PATH #\"c:/mytemp/avohakkutpois/Files_for_optimization/temp/\"\n",
     "\n",
     "\n",
     "class optimization:\n",
