Test Juliette to commit

--- a/Juliette.ipynb
+++ b/Juliette.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "88fba40c",
    "metadata": {},
    "outputs": [
@@ -13,10 +13,10 @@
       "NONE\n",
       "NONE\n",
       "WARNING: Implicitly replacing the Component attribute OBJ (type=<class\n",
-      "    'pyomo.core.base.objective.ScalarObjective'>) on block unknown with a new\n",
-      "    Component (type=<class 'pyomo.core.base.objective.ScalarObjective'>). This\n",
-      "    is usually indicative of a modelling error. To avoid this warning, use\n",
-      "    block.del_component() and block.add_component().\n"
+      "'pyomo.core.base.objective.ScalarObjective'>) on block unknown with a new\n",
+      "Component (type=<class 'pyomo.core.base.objective.ScalarObjective'>). This is\n",
+      "usually indicative of a modelling error. To avoid this warning, use\n",
+      "block.del_component() and block.add_component().\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "#REQUIRES CBC TO BE INSTALLED ON THE MACHINE USED!!!  See https://github.com/coin-or/Cbc -- OTHER SOLVERS CAN BE USED -- \n",
     "#THEN CHANGE this line: \"opt = SolverFactory('cbc') #Here we use the cbc solver -- open source software\"\n",
     "\n",
-    "path = \"c:/temp/GIT/SIMPLE_PROBLEM/\"#ADJUST TO OWN PATH #\"c:/mytemp/avohakkutpois/Files_for_optimization/temp/\"\n",
+    "path = \"C:/Users/juhu/OneDrive - Norwegian University of Life Sciences/Documents/Python/Simple_Problem/\"#ADJUST TO OWN PATH #\"c:/mytemp/avohakkutpois/Files_for_optimization/temp/\"\n",
     "\n",
     "\n",
     "class optimization:\n",
@@ -130,7 +130,7 @@
     "\n",
     "    def solve(self):\n",
     "        # Specify the solver and solve the model\n",
-    "        opt = SolverFactory('glpk') #Here we use the cbc solver -- open source software\n",
+    "        opt = SolverFactory('cbc') #Here we use the cbc solver -- open source software\n",
     "        self.results = opt.solve(self.model1,tee=False) #We solve a problem, but do not show the solver output\n",
     "\n",
     "# Create an optimization object        \n",
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
