Minor changes Juliette

--- a/Juliette.ipynb
+++ b/Juliette.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "88fba40c",
    "metadata": {},
    "outputs": [
@@ -21,12 +21,12 @@
     }
    ],
    "source": [
-    "from __future__ import division\n",
-    "from pyomo.environ import *\n",
+    "from __future__ import division #used in Python2.x so the division btw integers result in float, default in python3\n",
+    "from pyomo.environ import * #library for modeling and optimisation\n",
     "import argparse\n",
-    "from pyomo.opt import SolverStatus, TerminationCondition\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from pyomo.opt import SolverStatus, TerminationCondition #provide status of solvers\n",
+    "import pandas as pd #data manipulation library\n",
+    "import numpy as np \n",
     "import pyutilib.services\n",
     "import pickle\n",
     "import random\n",
@@ -47,7 +47,7 @@
     "\n",
     "OPT=\"_NPV\"\n",
     "\n",
-    "OPT = OPT + \"_\"+str(SALV_PRICE)\n",
+    "OPT = OPT + \"_\"+str(SALV_PRICE) #QUESTION: Here OPT becomes _NPV_0 > Why do we need that?\n",
     "\n",
     "#REQUIRES CBC TO BE INSTALLED ON THE MACHINE USED!!!  See https://github.com/coin-or/Cbc -- OTHER SOLVERS CAN BE USED -- \n",
     "#THEN CHANGE this line: \"opt = SolverFactory('cbc') #Here we use the cbc solver -- open source software\"\n",
@@ -57,7 +57,7 @@
     "\n",
     "class optimization:\n",
     "    def __init__(self):\n",
-    "        c = 0\n",
+    "        #c = 0\n",
     "        # Load data and preprocess by extracting branch and id from the id column\n",
     "        data_opt =  pd.read_csv(path+\"Data_Juliette.csv\")\n",
     "        data_opt['branch'] = [int(str(i)[-2:]) for i in data_opt['id']]\n",
@@ -74,12 +74,12 @@
     "        # Data structure initialization\n",
     "        all_data = data_opt\n",
     "\n",
-    "        Index_values = all_data.set_index(['id','branch']).index.unique()\n",
-    "        all_data = all_data.set_index(['id','branch','year','iteration'])\n",
-    "        AREA = all_data.loc[slice(None),0,2016,all_data.index.get_level_values(3).min()]['AREA']\n",
+    "        #Index_values = all_data.set_index(['id','branch']).index.unique() #array with unique index values composed of 'id' and 'branch'\n",
+    "        all_data = all_data.set_index(['id','branch','year','iteration']) #reassigns the Df with new multi-level index\n",
+    "        #AREA = all_data.loc[slice(None),0,2016,all_data.index.get_level_values(3).min()]['AREA']\n",
     "        all_data = all_data.fillna(0)\n",
     "        all_data['year'] = all_data.index.get_level_values(2)\n",
-    "        self.data_opt=all_data\n",
+    "        self.data_opt=all_data #the preprocessing fgets embedded in the class\n",
     "\n",
     "        self.combinations = 1\n",
     "\n",
@@ -96,10 +96,10 @@
     "        # Declare sets - These used to recongnize the number of stands, regimes and number of periods in the analysis.\n",
     "        # Define sets, variables, and constraints for the optimization problem\n",
     "        \n",
-    "        self.model1 = ConcreteModel()\n",
+    "        self.model1 = ConcreteModel() #defining the model\n",
     "\n",
-    "        self.model1.stands = Set(initialize = list(set(self.all_data.index.get_level_values(0))))\n",
-    "        self.model1.year = Set(initialize = list(set(self.all_data.index.get_level_values(2))))\n",
+    "        self.model1.stands = Set(initialize = list(set(self.all_data.index.get_level_values(0)))) #initialized with unique values from the first level of the index created earlier\n",
+    "        self.model1.year = Set(initialize = list(set(self.all_data.index.get_level_values(2)))) #initialized with unique values from the third level of the index created earlier\n",
     "        self.model1.iteration = Set(initialize = list(set(self.all_data.index.get_level_values(3))))        \n",
     "        self.model1.regimes = Set(initialize = list(set(self.all_data.index.get_level_values(1))))\n",
     "        self.model1.scen_index = Set(initialize= [i for i in range(0,self.combinations)])\n",
@@ -114,6 +114,7 @@
     "            return index\n",
     "        self.model1.index1 = Set(dimen=2, initialize=index_rule)\n",
     "\n",
+    "        #Decision variable\n",
     "        self.model1.X1 = Var(self.model1.index1, within=NonNegativeReals, bounds=(0,1), initialize=1)\n",
     "\n",
     "        self.all_data['year'] = self.all_data.index.get_level_values(2)\n",
@@ -123,6 +124,7 @@
     "            return sum((self.all_data.Harvested_V.loc[(s,r,k,it)]*self.all_data.AREA.loc[(s,r,k,it)]* self.model1.X1[(s,r)])/((1+INTEREST)**(2.5+self.all_data.year[(s,r,k,it)]))  for (s,r) in self.model1.index1 for k in self.model1.year for it in self.model1.iteration)\n",
     "        self.model1.OBJ = Objective(rule=outcome_rule, sense=maximize)\n",
     "\n",
+    "        #Constraint:\n",
     "        def regime_rule(model1, s):\n",
     "            row_sum = sum(model1.X1[(s,r)] for r in [x[1] for x in model1.index1 if x[0] == s])\n",
     "            return row_sum == 1\n",
@@ -192,21 +194,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "107fdcfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              Unnamed: 0           V  income  Harvested_V  \\\n",
+      "id   branch year   iteration                                                \n",
+      "1000 0      2016.0 0             1788480  115.633316     0.0          0.0   \n",
+      "            2021.0 0             1788481  147.821259     0.0          0.0   \n",
+      "            2026.0 0             1788482  175.182953     0.0          0.0   \n",
+      "            2031.0 0             1788483  204.771729     0.0          0.0   \n",
+      "            2036.0 0             1788484  235.119324     0.0          0.0   \n",
+      "\n",
+      "                              Harvested_V_log  Harvested_V_pulp   AREA  \\\n",
+      "id   branch year   iteration                                             \n",
+      "1000 0      2016.0 0                      0.0               0.0  0.358   \n",
+      "            2021.0 0                      0.0               0.0  0.358   \n",
+      "            2026.0 0                      0.0               0.0  0.358   \n",
+      "            2031.0 0                      0.0               0.0  0.358   \n",
+      "            2036.0 0                      0.0               0.0  0.358   \n",
+      "\n",
+      "                                       PV  HSI_RL_S1  HSI_RL_S2  ...  \\\n",
+      "id   branch year   iteration                                     ...   \n",
+      "1000 0      2016.0 0          3682.871582        0.0   0.131712  ...   \n",
+      "            2021.0 0          4790.845215        0.0   0.165733  ...   \n",
+      "            2026.0 0          5805.926270        0.0   0.184396  ...   \n",
+      "            2031.0 0          6847.854004        0.0   0.190028  ...   \n",
+      "            2036.0 0          7955.954102        0.0   0.181859  ...   \n",
+      "\n",
+      "                              CARBON_SOIL_Update       BM_total  \\\n",
+      "id   branch year   iteration                                      \n",
+      "1000 0      2016.0 0                81729.984375   91436.968750   \n",
+      "            2021.0 0                82959.656250  113110.695312   \n",
+      "            2026.0 0                83321.898438  131893.984375   \n",
+      "            2031.0 0                83927.273438  152284.000000   \n",
+      "            2036.0 0                85577.890625  173009.234375   \n",
+      "\n",
+      "                              DEAD_WOOD_DIVERSITY    scenic  MAIN_SP  \\\n",
+      "id   branch year   iteration                                           \n",
+      "1000 0      2016.0 0                       0.0956  4.278676      4.0   \n",
+      "            2021.0 0                       0.2145  4.470498      4.0   \n",
+      "            2026.0 0                       0.2828  4.584263      4.0   \n",
+      "            2031.0 0                       0.4008  4.675396      4.0   \n",
+      "            2036.0 0                       0.5657  4.769156      4.0   \n",
+      "\n",
+      "                                  H_dom  THIN   SC  natural_rm_wind    year  \n",
+      "id   branch year   iteration                                                 \n",
+      "1000 0      2016.0 0          14.103016     0  3.0              0.0  2016.0  \n",
+      "            2021.0 0          15.340117     0  3.0              0.0  2021.0  \n",
+      "            2026.0 0          16.382078     0  3.0              0.0  2026.0  \n",
+      "            2031.0 0          17.234787     0  3.0              0.0  2031.0  \n",
+      "            2036.0 0          18.069714     0  3.0              0.0  2036.0  \n",
+      "\n",
+      "[5 rows x 54 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "\"TESTXX\""
+    "# Create an instance of the optimization class\n",
+    "optimizer = optimization()\n",
+    "\n",
+    "all_data_new=optimizer.all_data\n",
+    "# Access and view the all_data DataFrame outside the class\n",
+    "print(optimizer.all_data.head()) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "daaea83f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'all_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\juhu\\OneDrive - Norwegian University of Life Sciences\\Documents\\Python\\Simple_Problem\\Juliette.ipynb Cell 3\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/juhu/OneDrive%20-%20Norwegian%20University%20of%20Life%20Sciences/Documents/Python/Simple_Problem/Juliette.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m display\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/juhu/OneDrive%20-%20Norwegian%20University%20of%20Life%20Sciences/Documents/Python/Simple_Problem/Juliette.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Assuming you have a DataFrame named 'all_data'\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/juhu/OneDrive%20-%20Norwegian%20University%20of%20Life%20Sciences/Documents/Python/Simple_Problem/Juliette.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m display(all_data)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'all_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "\n",
+    "# Assuming you have a DataFrame named 'all_data'\n",
+    "display(all_data)"
+   ]
   }
  ],
  "metadata": {
