Defining the combined HSI 11.10.23

--- a/Juliette.ipynb
+++ b/Juliette.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "88fba40c",
    "metadata": {},
    "outputs": [
@@ -11,12 +11,65 @@
      "output_type": "stream",
      "text": [
       "NONE\n",
-      "NONE\n",
-      "WARNING: Implicitly replacing the Component attribute OBJ (type=<class\n",
-      "'pyomo.core.base.objective.ScalarObjective'>) on block unknown with a new\n",
-      "Component (type=<class 'pyomo.core.base.objective.ScalarObjective'>). This is\n",
-      "usually indicative of a modelling error. To avoid this warning, use\n",
-      "block.del_component() and block.add_component().\n"
+      "ERROR: Rule failed when generating expression for Constraint COMB_HSI with\n",
+      "index 0: AttributeError: 'Series' object has no attribute 'is_component_type'\n",
+      "ERROR: Constructing component 'COMB_HSI' from data=None failed:\n",
+      "AttributeError: 'Series' object has no attribute 'is_component_type'\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3526, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\NMBU\\TEMP\\ipykernel_22532\\2692950056.py\", line 140, in <module>\n",
+      "    t2.model1.COMB_HSI = Constraint(t2.model1.iteration, rule=COMBINED_HSI)\n",
+      "  File \"C:\\Users\\juhu\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyomo\\core\\base\\block.py\", line 580, in __setattr__\n",
+      "    self.add_component(name, val)\n",
+      "  File \"C:\\Users\\juhu\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyomo\\core\\base\\block.py\", line 1185, in add_component\n",
+      "    val.construct(data)\n",
+      "  File \"C:\\Users\\juhu\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyomo\\core\\base\\constraint.py\", line 806, in construct\n",
+      "    self._setitem_when_not_present(index, rule(block, index))\n",
+      "  File \"C:\\Users\\juhu\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyomo\\core\\base\\initializer.py\", line 316, in __call__\n",
+      "    return self._fcn(parent, idx)\n",
+      "  File \"C:\\NMBU\\TEMP\\ipykernel_22532\\2692950056.py\", line 139, in COMBINED_HSI\n",
+      "    return t2.model1.HSI <= (1 - row_prod)\n",
+      "  File \"pyomo\\\\core\\\\expr\\\\numeric_expr.pyx\", line 403, in pyomo.core.expr.numeric_expr.NumericValue.__le__\n",
+      "  File \"C:\\Users\\juhu\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyomo\\core\\expr\\relational_expr.py\", line 431, in _generate_relational_expression\n",
+      "    rhs = _process_relational_arg(rhs, 2)\n",
+      "  File \"C:\\Users\\juhu\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyomo\\core\\expr\\relational_expr.py\", line 413, in _process_relational_arg\n",
+      "    arg = _process_nonnumeric_arg(arg)\n",
+      "  File \"C:\\Users\\juhu\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyomo\\core\\expr\\relational_expr.py\", line 385, in _process_nonnumeric_arg\n",
+      "    if obj.is_component_type() and obj.is_indexed():\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\pandas\\core\\generic.py\", line 5989, in __getattr__\n",
+      "    return object.__getattribute__(self, name)\n",
+      "AttributeError: 'Series' object has no attribute 'is_component_type'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2120, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1063, in format_exception_as_a_whole\n",
+      "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1155, in get_records\n",
+      "    FrameInfo(\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 780, in __init__\n",
+      "    ix = inspect.getsourcelines(frame)\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\inspect.py\", line 1006, in getsourcelines\n",
+      "    lines, lnum = findsource(object)\n",
+      "  File \"c:\\Users\\juhu\\.conda\\envs\\myenv\\lib\\inspect.py\", line 835, in findsource\n",
+      "    raise OSError('could not get source code')\n",
+      "OSError: could not get source code\n"
      ]
     }
    ],
@@ -155,6 +208,14 @@
     "    return t2.model1.NPV<=row_sum\n",
     "t2.model1.NPV_INV= Constraint(t2.model1.iteration,rule=NPV_INVENTORY)\n",
     "\n",
+    "#JUL:A function that evaluates the combined HSI\n",
+    "t2.model1.HSI=Var(within=NonNegativeReals, bounds=(0,1))\n",
+    "def COMBINED_HSI(model1,it):\n",
+    "    row_prod = prod((1-t2.all_data.LESSER_SPOTTED_WOODPECKER.loc[(s,r,k)]) *(1-t2.all_data.THREE_TOED_WOODPECKER.loc[(s,r,k)])*(1-t2.all_data.LONG_TAILED_TIT.loc[(s,r,k)]) for (s,r) in t2.model1.index1 for k in t2.model1.year)\n",
+    "    return t2.model1.HSI <= (1 - row_prod)\n",
+    "t2.model1.COMB_HSI = Constraint(t2.model1.iteration, rule=COMBINED_HSI)\n",
+    "\n",
+    "\n",
     "#Likely not needed -- used if constraints for even flow are present, and tries to remove them.\n",
     "try:\n",
     "    t2.model1.del_component(t2.model1.EVEN_inc)\n",
@@ -164,7 +225,7 @@
     "\n",
     "#Objective function -- maximizing NPV    \n",
     "def outcome_rule(model1):\n",
-    "    return t2.model1.NPV\n",
+    "    return (t2.model1.NPV+t2.model1.HSI) #JUL:total of 2 obj functions to be maximised\n",
     "t2.model1.OBJ = Objective(rule=outcome_rule, sense=maximize)\n",
     "\n",
     "# Solve the modified optimization model\n",
@@ -194,63 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "107fdcfe",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                              Unnamed: 0           V  income  Harvested_V  \\\n",
-      "id   branch year   iteration                                                \n",
-      "1000 0      2016.0 0             1788480  115.633316     0.0          0.0   \n",
-      "            2021.0 0             1788481  147.821259     0.0          0.0   \n",
-      "            2026.0 0             1788482  175.182953     0.0          0.0   \n",
-      "            2031.0 0             1788483  204.771729     0.0          0.0   \n",
-      "            2036.0 0             1788484  235.119324     0.0          0.0   \n",
-      "\n",
-      "                              Harvested_V_log  Harvested_V_pulp   AREA  \\\n",
-      "id   branch year   iteration                                             \n",
-      "1000 0      2016.0 0                      0.0               0.0  0.358   \n",
-      "            2021.0 0                      0.0               0.0  0.358   \n",
-      "            2026.0 0                      0.0               0.0  0.358   \n",
-      "            2031.0 0                      0.0               0.0  0.358   \n",
-      "            2036.0 0                      0.0               0.0  0.358   \n",
-      "\n",
-      "                                       PV  HSI_RL_S1  HSI_RL_S2  ...  \\\n",
-      "id   branch year   iteration                                     ...   \n",
-      "1000 0      2016.0 0          3682.871582        0.0   0.131712  ...   \n",
-      "            2021.0 0          4790.845215        0.0   0.165733  ...   \n",
-      "            2026.0 0          5805.926270        0.0   0.184396  ...   \n",
-      "            2031.0 0          6847.854004        0.0   0.190028  ...   \n",
-      "            2036.0 0          7955.954102        0.0   0.181859  ...   \n",
-      "\n",
-      "                              CARBON_SOIL_Update       BM_total  \\\n",
-      "id   branch year   iteration                                      \n",
-      "1000 0      2016.0 0                81729.984375   91436.968750   \n",
-      "            2021.0 0                82959.656250  113110.695312   \n",
-      "            2026.0 0                83321.898438  131893.984375   \n",
-      "            2031.0 0                83927.273438  152284.000000   \n",
-      "            2036.0 0                85577.890625  173009.234375   \n",
-      "\n",
-      "                              DEAD_WOOD_DIVERSITY    scenic  MAIN_SP  \\\n",
-      "id   branch year   iteration                                           \n",
-      "1000 0      2016.0 0                       0.0956  4.278676      4.0   \n",
-      "            2021.0 0                       0.2145  4.470498      4.0   \n",
-      "            2026.0 0                       0.2828  4.584263      4.0   \n",
-      "            2031.0 0                       0.4008  4.675396      4.0   \n",
-      "            2036.0 0                       0.5657  4.769156      4.0   \n",
-      "\n",
-      "                                  H_dom  THIN   SC  natural_rm_wind    year  \n",
-      "id   branch year   iteration                                                 \n",
-      "1000 0      2016.0 0          14.103016     0  3.0              0.0  2016.0  \n",
-      "            2021.0 0          15.340117     0  3.0              0.0  2021.0  \n",
-      "            2026.0 0          16.382078     0  3.0              0.0  2026.0  \n",
-      "            2031.0 0          17.234787     0  3.0              0.0  2031.0  \n",
-      "            2036.0 0          18.069714     0  3.0              0.0  2036.0  \n",
-      "\n",
-      "[5 rows x 54 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'merged_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\juhu\\OneDrive - Norwegian University of Life Sciences\\Documents\\Python\\Simple_Problem\\Juliette.ipynb Cell 2\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/juhu/OneDrive%20-%20Norwegian%20University%20of%20Life%20Sciences/Documents/Python/Simple_Problem/Juliette.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#trick to see all_data\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/juhu/OneDrive%20-%20Norwegian%20University%20of%20Life%20Sciences/Documents/Python/Simple_Problem/Juliette.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m all_data_new\u001b[39m=\u001b[39moptimizer\u001b[39m.\u001b[39mall_data\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/juhu/OneDrive%20-%20Norwegian%20University%20of%20Life%20Sciences/Documents/Python/Simple_Problem/Juliette.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m merged_df_new\u001b[39m=\u001b[39mmerged_df\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'merged_df' is not defined"
      ]
     }
    ],
@@ -258,14 +275,15 @@
     "# Create an instance of the optimization class\n",
     "optimizer = optimization()\n",
     "\n",
+    "#trick to see all_data\n",
     "all_data_new=optimizer.all_data\n",
-    "# Access and view the all_data DataFrame outside the class\n",
-    "print(optimizer.all_data.head()) "
+    "\n",
+    "merged_df_new=merged_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "daaea83f",
    "metadata": {},
    "outputs": [
@@ -282,10 +300,18 @@
     }
    ],
    "source": [
-    "from IPython.display import display\n",
-    "\n",
-    "# Assuming you have a DataFrame named 'all_data'\n",
-    "display(all_data)"
+    "#JUL:A function that evaluates the combined HSI\n",
+    "t2.model1.HSI=Var(within=NonNegativeReals, bounds=(0,1))\n",
+    "def COMBINED_HSI(model1,s):\n",
+    "    # Define a list of species name\n",
+    "    species_name = ['LESSER_SPOTTED_WOODPECKER', 'THREE_TOED_WOODPECKER']\n",
+    "    row_prod=[]\n",
+    "    for species in species_name:\n",
+    "        product = (1-t2.all_data[species].loc[(s,r,k)] for (s,r) in t2.model1.index1 for k in t2.model1.year)\n",
+    "        row_prod.append(product)\n",
+    "    final_product=prod(row_prod)\n",
+    "    return t2.model1.HSI <= (1 - final_product)\n",
+    "t2.model1.COMB_HSI = Constraint(t2.model1.stands, rule=COMBINED_HSI)"
    ]
   }
  ],
