update landscape hsi

--- a/Juliette.ipynb
+++ b/Juliette.ipynb
@@ -241,11 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e5a1ff49",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t2.model1.Landscape_HSI=Var(t2.model1.year, within=NonNegativeReals)#, bounds=(0,1))\n",
+    "def Landscape_HSI(model1, k):\n",
+    "    Land_HSI = sum(t2.model1.HSI[(s,k)] for s in t2.model1.stands)\n",
+    "    return t2.model1.Landscape_HSI[k] <= Land_HSI\n",
+    "t2.model1.COMB_LAND_HSI = Constraint(t2.model1.year, rule=Landscape_HSI)"
+   ]
   },
   {
    "cell_type": "code",
