changing to area

--- a/Juliette.ipynb
+++ b/Juliette.ipynb
@@ -241,14 +241,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e5a1ff49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Implicitly replacing the Component attribute Landscape_HSI\n",
+      "    (type=<class 'pyomo.core.base.var.IndexedVar'>) on block unknown with a\n",
+      "    new Component (type=<class 'pyomo.core.base.var.IndexedVar'>). This is\n",
+      "    usually indicative of a modelling error. To avoid this warning, use\n",
+      "    block.del_component() and block.add_component().\n",
+      "WARNING: Implicitly replacing the Component attribute COMB_LAND_HSI\n",
+      "    (type=<class 'pyomo.core.base.constraint.IndexedConstraint'>) on block\n",
+      "    unknown with a new Component (type=<class\n",
+      "    'pyomo.core.base.constraint.IndexedConstraint'>). This is usually\n",
+      "    indicative of a modelling error. To avoid this warning, use\n",
+      "    block.del_component() and block.add_component().\n"
+     ]
+    }
+   ],
    "source": [
     "t2.model1.Landscape_HSI=Var(t2.model1.year, within=NonNegativeReals)#, bounds=(0,1))\n",
     "def Landscape_HSI(model1, k):\n",
-    "    Land_HSI = sum(t2.model1.HSI[(s,k)] for s in t2.model1.stands)\n",
+    "    Land_HSI = sum(t2.model1.HSI[(s,k)]*t2.AREA[s] for s in t2.model1.stands)\n",
     "    return t2.model1.Landscape_HSI[k] <= Land_HSI\n",
     "t2.model1.COMB_LAND_HSI = Constraint(t2.model1.year, rule=Landscape_HSI)"
    ]
@@ -294,12 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "63f00a23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1899999976158142"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "t2.all_data.THREE_TOED_WOODPECKER.loc[(1024,0,2016,0)]"
+    "t2.AREA[1024]"
    ]
   },
   {
